# JARVIS

./: .gitignore  .mcp.json  AGENTS.md  DESIGN_HANDOFF.md  SYSTEM_DESIGN.md  TASKS.md
.github/: last_active.txt
backend/: config.py  main.py  pipeline.py  pyproject.toml  schemas.py
backend/agents/: __init__.py  account_manager.py  agentmail_client.py  browser_agent.py  browser_use_client.py  cloud_skills.py  darkweb_agent.py  deep_researcher.py  google_agent.py  instagram_agent.py  linkedin_agent.py  models.py  orchestrator.py  osint_agent.py  social_agent.py  twitter_agent.py  url_scraper_agent.py
backend/capture/: frame_handler.py
backend/db/: __init__.py  convex_client.py
backend/enrichment/: exa_client.py  sixtyfour_client.py
backend/eval/: hud_eval.py
backend/identification/: human_detector.py  pimeyes.py
backend/observability/: __init__.py  laminar.py
backend/scripts/: benchmark_swarm.py  create_platform_accounts.py  login_browser_use.py
backend/synthesis/: models.py
backend/tests/: test_adapters.py  test_capture.py  test_clients.py  test_config.py  test_integration.py  test_models.py  test_services.py
frontend/: .env.example
frontend/src/app/: page.tsx
frontend/src/components/: BrowserSessionViewer.tsx  CameraFeed.tsx  DossierView.tsx  IntelBoard.tsx  LiveFeed.tsx  PersonCard.tsx  Sidebar.tsx  StatusBar.tsx  TopBar.tsx
frontend/src/lib/: demo-data.ts  types.ts  useFrameCapture.ts  useGlassesStream.ts  useSessionPoller.ts
